5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1674_1107.log
== SUBMITION (2019-05-02 01:21:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
		x='domingo'
	elif(dia==1):
		x='segunda'
	elif(dia==2):
		x='terca'
	elif(dia==3):
		x='quarta'
	elif(dia==4):
		x='quinta'
	elif(dia==5):
		x='sexta'
	elif(dia==6):
		x='sabado'
	if(futuro==0):
		y='domingo'
	elif(futuro==1):
		y='segunda'
	elif(futuro==2):
		y='terca'
	elif(futuro==3):
		y='quarta'
	elif(futuro==4):
		y='quinta'
	elif(futuro==5):
		y='sexta'
	elif(futuro==6):
		y='sabado'
	print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.154701
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 40
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:22:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
		x='domingo'
	elif(dia==1):
		x='segunda'
	elif(dia==2):
		x='terca'
	elif(dia==3):
		x='quarta'
	elif(dia==4):
		x='quinta'
	elif(dia==5):
		x='sexta'
	elif(dia==6):
		x='sabado'
	if(futuro==0):
		y='domingo'
	elif(futuro==1):
		y='segunda'
	elif(futuro==2):
		y='terca'
	elif(futuro==3):
		y='quarta'
	elif(futuro==4):
		y='quinta'
	elif(futuro==5):
		y='sexta'
	elif(futuro==6):
		y='sabado'
	print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:23:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
		x='domingo'
		elif(dia==1):
		x='segunda'
		elif(dia==2):
		x='terca'
		elif(dia==3):
		x='quarta'
		elif(dia==4):
		x='quinta'
		elif(dia==5):
		x='sexta'
		elif(dia==6):
		x='sabado'
		if(futuro==0):
		y='domingo'
		elif(futuro==1):
		y='segunda'
		elif(futuro==2):
		y='terca'
		elif(futuro==3):
		y='quarta'
		elif(futuro==4):
		y='quinta'
		elif(futuro==5):
		y='sexta'
		elif(futuro==6):
		y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 12
    x='domingo'
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:24:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:24:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
		else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:24:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
		else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.136417
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 40
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:24:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
		else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:25:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:25:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
	print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:26:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
		else:
		print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:26:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
		if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
		else:
			print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 40
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:26:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
	print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 13
    elif(dia==1):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:27:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
			x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
	print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 13
    elif(dia==1):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:27:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
		x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
	print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 13
    elif(dia==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:51:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia=int(input(''))
diafut=int(input(''))

futuro= (dia + diafut) % 7

if(dia>=0) and (dia <=6):
	if(diafut>0):
		if(dia==0):
		x='domingo'
		elif(dia==1):
			x='segunda'
		elif(dia==2):
			x='terca'
		elif(dia==3):
			x='quarta'
		elif(dia==4):
			x='quinta'
		elif(dia==5):
			x='sexta'
		elif(dia==6):
			x='sabado'
		if(futuro==0):
			y='domingo'
		elif(futuro==1):
			y='segunda'
		elif(futuro==2):
			y='terca'
		elif(futuro==3):
			y='quarta'
		elif(futuro==4):
			y='quinta'
		elif(futuro==5):
			y='sexta'
		elif(futuro==6):
			y='sabado'
		print('Hoje eh', x, 'e o ida futuro eh', y)
	else:
	print('A entrada', diafut, "eh invalida")
else:
	print('A entrada', dia, 'eh invalida')
		
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.207505
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 13
    x='domingo'
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
